; ModuleID = '/home/carl/AnghaBench/linux/fs/sysfs/extr_symlink.c_sysfs_delete_link.c'
source_filename = "/home/carl/AnghaBench/linux/fs/sysfs/extr_symlink.c_sysfs_delete_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kobject = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i8* }

@sysfs_symlink_target_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sysfs_delete_link(%struct.kobject* %0, %struct.kobject* %1, i8* %2) #0 {
  %4 = alloca %struct.kobject*, align 8
  %5 = alloca %struct.kobject*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.kobject* %0, %struct.kobject** %4, align 8
  store %struct.kobject* %1, %struct.kobject** %5, align 8
  store i8* %2, i8** %6, align 8
  store i8* null, i8** %7, align 8
  %8 = call i32 @spin_lock(i32* @sysfs_symlink_target_lock)
  %9 = load %struct.kobject*, %struct.kobject** %5, align 8
  %10 = getelementptr inbounds %struct.kobject, %struct.kobject* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = icmp ne %struct.TYPE_3__* %11, null
  br i1 %12, label %13, label %25

13:                                               ; preds = %3
  %14 = load %struct.kobject*, %struct.kobject** %4, align 8
  %15 = getelementptr inbounds %struct.kobject, %struct.kobject* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = call i64 @kernfs_ns_enabled(%struct.TYPE_3__* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %13
  %20 = load %struct.kobject*, %struct.kobject** %5, align 8
  %21 = getelementptr inbounds %struct.kobject, %struct.kobject* %20, i32 0, i32 0
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  store i8* %24, i8** %7, align 8
  br label %25

25:                                               ; preds = %19, %13, %3
  %26 = call i32 @spin_unlock(i32* @sysfs_symlink_target_lock)
  %27 = load %struct.kobject*, %struct.kobject** %4, align 8
  %28 = getelementptr inbounds %struct.kobject, %struct.kobject* %27, i32 0, i32 0
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %28, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = call i32 @kernfs_remove_by_name_ns(%struct.TYPE_3__* %29, i8* %30, i8* %31)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i64 @kernfs_ns_enabled(%struct.TYPE_3__*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @kernfs_remove_by_name_ns(%struct.TYPE_3__*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
